# robotsix-mill

./: .coverage  .dockerignore  .env  .env.example  .git-blame-ignore-revs  .gitignore  .gitleaks.toml  .gitmodules  .hadolint.yaml  .jscpd.json  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  404.html  =0.25  =8  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.deploy  Makefile  README.md  ROADMAP.md  SECURITY.md  _check_advanced.py  _epic  _gen_schema.py  alembic.ini  doc-agent-ledger.md  doc_agent_output.json  docker-compose.deploy.yml  docker-compose.override.example.yml  docker-compose.yml  entrypoint.sh  index.html  lychee.toml  mkdocs.yml  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  dependency-submission.yml  deploy-server-ci.yml  deploy-server-release.yml  deps-bump-schedule.yml  deps-bump.yml  docker-publish.yml  (+11 more)
.robotsix-mill/: config.yaml
agent-communication-research/: index.html
agent-md-candidates/: index.html
agent-yaml-schema/: index.html
agent_definitions/: agent_check.yaml  already_done_check.yaml  answer.yaml  ask_to_ticket.yaml  audit.yaml  auto-approve.yaml  bc_check.yaml  ci_categorizer.yaml  ci_fix.yaml  codeql_fp_triage.yaml  completeness_check.yaml  cost_reconciliation.yaml  dedup.yaml  doc_classifier.yaml  document.yaml  epic_breakdown.yaml  epic_status.yaml  health.yaml  implement.yaml  maintenance.yaml  maintenance_triage.yaml  obsolescence.yaml  rebase.yaml  refine.yaml  retrospect.yaml  review.yaml  review_revision.yaml  reviewer-agreement.yaml  scope_triage.yaml  spec-review.yaml  survey.yaml  test_gap.yaml  test_scope.yaml  tester.yaml  triage.yaml
agent_references/: betterleaks.md  module-shadowing.md  pre-commit-ci.md  sqlalchemy-sqlite.md
agents/: index.html
alembic/: env.py  script.py.mako
approval-gate/: index.html
audit-agent/: index.html
blocked-ticket-recovery/: index.html
board-cleanup/: index.html
board-operations/: index.html
changelog.d/: +deploy-footprint-overblock.bugfix.md  0000.feature.md  0000.misc.md
changes/: 20260618T145744Z-add-state-sync-periodic-agent-to-validat-abaf.misc.md  20260619T033115Z-implement-env-doc-sync-periodic-agent-to-f84d.misc.md
ci-policy/: index.html
config/: config.example.json  config.example.yaml  config.schema.json  config.yaml  mail.defaults.yaml  mail.example.toml  mail.local.example.yaml  mill.defaults.yaml  mill.local.example.yaml  repos.example.yaml  repos.yaml.bak2  secrets.example.yaml
config-audit/: index.html
configuration/: index.html
cost-and-resilience/: index.html
dedup-guard/: index.html
dependencies/: index.html
deploy/: docker-compose.yml  split_config.py
deployment/: index.html
dev/: auto-mail-autoupdate.sh  migrate-env-to-yaml.py  mill-autoupdate.sh  mill-idle-check.py  strip-ticket-tracking.sh
diagnostic-agent/: index.html
docker-architecture/: index.html
docs/: agent-communication-research.md  agent-md-candidates.md  agent-yaml-schema.md  agents.md  approval-gate.md  audit-agent.md  blocked-ticket-recovery.md  board-agent.md  board-cleanup.md  board-operations.md  ci-policy.md  component-agent.md  config-audit.md  configuration.md  connecting.md  cost-and-resilience.md  dedup-guard.md  dependencies.md  deployment.md  diagnostic-agent.md  docker-architecture.md  epic-dedup.md  expert-yaml-schema.md  github-app.md  index.md  ingestion.md  inquiry-to-task.md  merge-stage.md  meta-board.md  modules.schema.yaml  modules.yaml  notifications.md  observability.md  orphaned-pr-check.md  pin-bump.md  proposed-actions.md  publishing.md  retrospect-memory.md  reusable-workflow-callers.md  rfc-config-v2.md  (+7 more)
epic-dedup/: index.html
expert-yaml-schema/: index.html
expert_definitions/: python-backend.yaml
github-app/: index.html
inquiry-to-task/: index.html
merge-stage/: index.html
meta-board/: index.html
notifications/: index.html
observability/: index.html
orphaned-pr-check/: index.html
proposed-actions/: index.html
publishing/: index.html
repo-scaffold/: index.html
retrospect-memory/: index.html
reusable-workflow-callers/: index.html
rfc-config-v2/: index.html
robotsix-yaml-config/: .gitignore  README.md  pyproject.toml
robotsix-yaml-config/src/robotsix_yaml_config/: __init__.py  _core.py  _env.py  _errors.py  _flatten.py
robotsix-yaml-config/tests/: test_core.py  test_env.py  test_flatten.py
sandbox/: Dockerfile
scope-triage/: index.html
screenshots/: index.html
scripts/: board_browser_check.py  check_config_standard_footprint.py  check_config_sync.py  check_kind_literals.py  check_sourcekind_frontend_parity.py  emit_config_schema.py  gen_completions.py  inspect_trace.py  live_fallback.py  load_test_board_manager.py  migrate-config  migrate.sh  retrospect_cost_breakdown.py  smoke_board.sh  smoke_board_browser.sh  validate-changelog.py  validate_event_mode.py  validate_module_paths.py  validate_workflow_permissions.py  verify_repos_config.py
search/: search_index.json
security/: index.html
tests/: conftest.py  script_loader.py  test_agent_candidates.py  test_agent_check.py  test_agent_double_emit.py  test_agents_rework.py  test_api.py  test_audit.py  test_autoupdate.py  test_base_client.py  test_bespoke_runner.py  test_check_config_sync.py  test_ci_fix.py  test_ci_fixing.py  test_ci_monitor.py  test_claude_sdk.py  test_cli.py  test_config.py  test_config_sync.py  test_config_sync_runner.py  test_copy_paste_runner.py  test_core.py  test_core_retry.py  test_cost.py  test_cost_reconciliation_runner.py  test_data_dir_audit_runner.py  test_db.py  test_dedup.py  test_deep.py  test_deliver.py  test_detect.py  test_docs_nav.py  test_doctests.py  test_env_sync_runner.py  test_epic_status.py  test_explore.py  test_fetch.py  test_fs_tools.py  test_github.py  test_health.py  (+51 more)
ticket-provenance/: index.html
trace-health/: index.html
vcs/: index.html
workspace-cleanup/: index.html
(+1007 files in other folders)
