[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-yaml-config"
version = "0.1.0"
description = "Backend-agnostic YAML configuration cascade primitives: deep-merge, layered file loading, env-var overlay, and dotted-path flattening."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Damien Robotsix" }]
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6"]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_yaml_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
