[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-yaml-config"
version = "0.1.0"
description = "Backend-agnostic YAML configuration cascade primitives: deep-merge, layered file loading, env-var overlay, and dotted-path flattening."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Damien Robotsix" }]
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6"]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_yaml_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.deptry]
# 'pyyaml' is distributed under the import name 'yaml'; map it so deptry
# does not report DEP001 (yaml missing) / DEP002 (pyyaml unused).
[tool.deptry.package_module_name_map]
pyyaml = "yaml"

[tool.deptry.per_rule_ignores]
# These are dev-only tools invoked via the CLI (and a type-stub package),
# not imported in the codebase, so DEP002 is a false positive for them.
DEP002 = ["pytest", "ruff", "mypy", "types-PyYAML"]
