[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-mill"
version = "0.0.1"
description = "Self-contained LLM-driven ticket solver. SQLite-backed management plane + file workspaces, event-driven worker, delivers merge requests to GitHub/GitLab."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Damien Robotsix" }]
dependencies = [
    "pydantic>=2",
    "pydantic-ai-slim[openrouter,openai]>=1.0",
    # LLM I/O (OpenRouter model construction, DeepSeek pin, per-tier reasoning,
    # cost, retry/transient) extracted to a standalone library. See
    # agents/openrouter_cost.py + agents/retry.py (now thin shims).
    "robotsix-llmio[openrouter-deepseek,claude-sdk] @ git+https://github.com/damien-robotsix/robotsix-llmio.git@28b23a848003",
    # Shared YAML config-cascade library, consumed via git like robotsix-llmio.
    # Imported by config_loader.py in the follow-on integration ticket.
    "robotsix-yaml-config @ git+https://github.com/damien-robotsix/robotsix-yaml-config.git@d302ee4ada88905efa48333894ed19519f9f7920",
    # Agent-comm board agent: exposes the mill board's full ticket lifecycle
    # over agent-comm structured ops, so other agents can drive a board
    # programmatically (query, file, comment, transition, approve, merge,
    # resume, migrate).
    "robotsix-board-agent @ git+https://github.com/damien-robotsix/robotsix-board-agent.git@3b999fc697fd1112024160f6f5ba45bd89e7f5d0",
    # robotsix-agent-comm is imported by board-agent's BrokeredBoardResponder
    # (the board agent's pull/mailbox transport). Declared here as a direct git
    # URL — not via board-agent's [prod] extra — because that extra references
    # agent-comm by bare name + uv-only sources, which the pip-based license/
    # security audit can't resolve. A direct URL works for both pip and uv.
    "robotsix-agent-comm @ git+https://github.com/damien-robotsix/robotsix-agent-comm.git@87bb25cde8176cbf4f7136f8c8254f27ff75aecd",
    "prometheus-fastapi-instrumentator>=8",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "sqlmodel>=0.0.22",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyjwt[crypto]>=2",
    "pypdf>=5",
    # Shared kanban-board frontend library: column-per-status board chrome
    # parameterized by a BoardAdapter Protocol and a render-mode switch.
    # Consumed via git dependency — see robotsix-board README for API docs.
    "robotsix-board @ git+https://github.com/damien-robotsix/robotsix-board.git@338cf1698b5f9db9afa232445fb39e298d80ce17",
]

[project.optional-dependencies]
# Tracing is opt-in: nothing here is imported unless LANGFUSE_* is set.
tracing = [
    "langfuse>=3",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

# Internal CI/contributor tooling — NOT published package extras. PEP 735
# dependency-groups are resolved into uv.lock but never leak into the shipped
# wheel/sdist metadata (unlike [project.optional-dependencies]), so they can't
# be pulled into a runtime/audit environment via `pip install robotsix-mill[dev]`.
[dependency-groups]
# ruff is PINNED (== not >=): CI runs `uv run ruff`, which otherwise resolves
# the latest release while the sandbox image + local envs sit on an older one
# — so `ruff format --check` flip-flops and turns CI red on formatting the
# agent (and humans) already consider clean. Pin so CI, the sandbox, and local
# format identically. Bump deliberately, reformatting the repo in the same commit.
# Module-taxonomy JSON Schema and validation CLI — a standalone library
# (github.com/damien-robotsix/robotsix-modules) consumed via a git dependency,
# exactly like robotsix-llmio. Used only via pre-commit / CI (the
# `robotsix-modules validate` step + the validate-module-taxonomy hook); no
# Python import in mill. CI/dev-only, so it stays in the dev group (out of the
# pip-based audit install and the runtime image).
dev = ["pytest>=8", "pytest-asyncio>=0.21", "pytest-cov>=7", "pytest-xdist>=3", "bandit[toml]>=1.8", "mypy>=1.15", "mypy-baseline>=0.7", "ruff==0.15.15", "deptry>=0.25", "vulture>=2", "robotsix-modules @ git+https://github.com/damien-robotsix/robotsix-modules.git@d56fd5d0ae36e2226a471ef276a38faa5d611e6b"]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.27"]

[tool.uv]
# `uv sync` pulls the dev group automatically, so CI/contributors don't need
# an explicit `--group dev` on every sync.
default-groups = ["dev"]

[tool.uv.sources]
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "28b23a848003" }
robotsix-yaml-config = { git = "https://github.com/damien-robotsix/robotsix-yaml-config.git", rev = "d302ee4ada88905efa48333894ed19519f9f7920" }
robotsix-board-agent = { git = "https://github.com/damien-robotsix/robotsix-board-agent.git", rev = "3b999fc697fd1112024160f6f5ba45bd89e7f5d0" }
robotsix-agent-comm = { git = "https://github.com/damien-robotsix/robotsix-agent-comm.git", rev = "87bb25cde8176cbf4f7136f8c8254f27ff75aecd" }
robotsix-board = { git = "https://github.com/damien-robotsix/robotsix-board.git", rev = "338cf1698b5f9db9afa232445fb39e298d80ce17" }
robotsix-modules = { git = "https://github.com/damien-robotsix/robotsix-modules.git", rev = "d56fd5d0ae36e2226a471ef276a38faa5d611e6b" }

[project.scripts]
robotsix-mill = "robotsix_mill.cli:main"
robotsix-autoupdate = "robotsix_mill.autoupdate:main"
robotsix-deploy = "robotsix_deploy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_mill", "src/robotsix_deploy"]

# Allow the direct git references for robotsix-llmio / robotsix-modules in
# the dependency lists.
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "--doctest-modules"]
xfail_strict = true
markers = [
    "docker: tests that require a running Docker daemon and network access",
]
filterwarnings = [
    "error",
    # Python 3.14 upstream: inspect.getfile() can trigger ResourceWarning
    # for an unclosed sqlite3.Connection held internally by the
    # interpreter.  Not actionable in our code.
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["robotsix_mill", "robotsix_deploy"]
branch = true
relative_files = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 80

[tool.bandit]
# Run with: pre-commit run bandit --all-files
# (uses `-c pyproject.toml` via the pre-commit hook args)
#
# Severity floor: MEDIUM+.  CI runs with `--severity-level medium`,
# mirroring the Bandit ≤1.8 default.  Bandit ≥1.9 widened the default
# to LOW, surfacing pre-existing LOW findings that are tracked but
# intentionally non-blocking.  Lowering to LOW+ is a future decision
# requiring a triage pass of the existing LOW backlog.
targets = ["src/"]
exclude_dirs = ["tests/"]
skips = ["B101"]

[tool.ruff.lint]
extend-select = ["S", "DTZ001", "DTZ002", "DTZ003", "C90", "B"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Security asserts, fixture credentials, and subprocess helpers are
# expected idioms in these non-production trees — broadly ignore the
# whole flake8-bandit (S) family there. (per-file-ignores are additive:
# these union with the exact-path DTZ001/C901 entries below.)
"tests/**" = ["S"]
"dev/**" = ["S"]
"scripts/**" = ["S"]
# vulture_whitelist.py is a tool configuration file whose syntax
# (bare-name expressions marking "used" identifiers for vulture's
# dead-code scanner) triggers B018 ("useless expression") and F821
# ("undefined name") on every entry.  Both are the intended API.
"vulture_whitelist.py" = ["B018", "F821"]
# test_datetime_utils.py exercises TZDateTime's handling of naive
# datetime inputs on purpose — DTZ001 (no tzinfo) is the contract
# under test, not a defect.
"tests/core/test_datetime_utils.py" = ["DTZ001"]
# Pre-existing test fixture factories that exceed C901's default
# complexity threshold. Rewriting them is out of scope for the
# lint-debt cleanup pass; revisit when the surrounding test files
# get refactored.
"tests/runtime/test_worker.py" = ["C901"]
"tests/runtime/test_api.py" = ["C901"]
"tests/cli/test_cli.py" = ["C901"]
"tests/autoupdate/test_autoupdate.py" = ["C901"]
# --- src/ legacy hot spots --------------------------------------------------
# Cross-module re-exports of periodic_runner helpers. Each *_runner
# stub re-exports ``_clone_token`` etc. so the worker can import them
# from the stub; the names look "unused" to ruff but are public API.
"src/robotsix_mill/runners/agent_check_runner.py" = ["F401"]
"src/robotsix_mill/runners/audit_runner.py" = ["F401"]
"src/robotsix_mill/runners/bc_check_runner.py" = ["F401"]
"src/robotsix_mill/runners/forge_parity_runner.py" = ["F401"]
"src/robotsix_mill/runners/module_curator_runner.py" = ["F401"]
"src/robotsix_mill/runners/survey_runner.py" = ["F401"]
# F821 in these files: string-typed annotations referencing types
# that are intentionally imported lazily inside the function body
# (httpx, AgentDefinition, AgentHandle, RepoConfig, Path) — the
# strings stay correct at runtime; ruff would only be appeased by
# a TYPE_CHECKING block, which is out of scope for the cleanup pass.
"src/robotsix_mill/agents/base.py" = ["F821", "S110"]
"src/robotsix_mill/agents/expert_manager.py" = ["F821"]
# C901 complexity: pre-existing legacy functions that exceed the
# default threshold. Each refactor would touch its own ticket — list
# the files here so the gate keeps holding new debt at bay without
# blocking on a sweep.
"src/robotsix_mill/agents/answering.py" = ["C901"]
"src/robotsix_mill/agents/consult_expert.py" = ["C901"]
"src/robotsix_mill/agents/coordinating.py" = ["C901"]
"src/robotsix_mill/agents/fs_tools.py" = ["C901", "S112"]
"src/robotsix_mill/agents/openrouter_cost.py" = ["C901"]
"src/robotsix_mill/agents/read_ticket.py" = ["C901"]
"src/robotsix_mill/agents/report_issue.py" = ["C901"]
"src/robotsix_mill/agents/retry.py" = ["C901", "S101", "S311"]
"src/robotsix_mill/agents/trace_inspector.py" = ["C901"]
"src/robotsix_mill/cli/**/*.py" = ["C901"]
"src/robotsix_mill/core/dedup.py" = ["C901"]
"src/robotsix_mill/langfuse/client.py" = ["C901", "DTZ003", "E731"]
"src/robotsix_mill/runtime/routes.py" = ["F821", "C901"]
"src/robotsix_mill/runtime/lifespan.py" = ["C901"]
"src/robotsix_mill/runtime/routes/_tickets.py" = ["C901", "S110"]
"src/robotsix_mill/runtime/routes/_traces.py" = ["C901"]
"src/robotsix_mill/runtime/worker/*.py" = ["C901", "S110", "S603", "S607"]
"src/robotsix_mill/stages/implement/*.py" = ["C901", "S603", "S607"]
"src/robotsix_mill/stages/refine/*.py" = ["C901", "S603", "S607"]
"src/robotsix_mill/stages/retrospect.py" = ["F821", "C901", "S112"]
"src/robotsix_mill/stages/review.py" = ["C901"]
"src/robotsix_mill/stages/document.py" = ["C901"]
"src/robotsix_mill/stages/deliver.py" = ["C901"]
"src/robotsix_mill/stages/code_reviewing.py" = ["C901"]
"src/robotsix_mill/forge/github.py" = ["C901", "S110"]
"src/robotsix_mill/forge/github_pr.py" = ["C901", "S110"]
"src/robotsix_mill/forge/github_ci.py" = ["C901", "S110"]
"src/robotsix_mill/forge/github_code_scanning.py" = ["C901", "S110"]
"src/robotsix_mill/forge/gitlab.py" = ["C901"]
"src/robotsix_mill/core/service/*.py" = ["F821", "C901", "S110", "S603", "S607"]
"src/robotsix_mill/runners/pass_runner.py" = ["C901"]
"src/robotsix_mill/agents/coding.py" = ["C901"]
"src/robotsix_mill/agents/bespoke.py" = ["C901"]
"src/robotsix_mill/runners/timeout_escalation_runner.py" = ["C901", "S110"]
"src/robotsix_mill/agents/scope_triage.py" = ["C901"]
"src/robotsix_mill/agents/dedup.py" = ["C901"]
"src/robotsix_mill/agents/web_research.py" = ["C901"]
"src/robotsix_mill/runners/trace_review_runner.py" = ["C901"]
"src/robotsix_mill/runners/trace_health_runner.py" = ["C901"]
"src/robotsix_mill/runners/verify_runner.py" = ["C901", "S110"]
"src/robotsix_mill/runtime/tracing.py" = ["C901"]
"src/robotsix_mill/stages/merge/*.py" = ["C901", "S603", "S607"]
"src/robotsix_mill/stages/pause.py" = ["C901"]
# Migration / one-shot helper scripts — complexity is acceptable
# because they're throwaway scripts, not library code.
"dev/migrate-env-to-yaml.py" = ["C901", "E402"]
"scripts/verify_repos_config.py" = ["C901"]

# --- src/ flake8-bandit (S) legacy hot spots --------------------------------
# Pre-existing findings inherent to a git/subprocess-automation tool and
# its best-effort cleanup paths (try-except-pass/continue, subprocess
# without shell=True / with partial paths, hardcoded temp dirs, non-crypto
# random). Grandfathered per-file with only the codes each file triggers so
# the S gate stays active for every other src/ file and new violations are
# caught. Not defects — refactoring them is future, per-finding work.
"src/robotsix_mill/agents/fallback.py" = ["S110"]
"src/robotsix_mill/agents/jscpd_tool.py" = ["S603", "S607"]
"src/robotsix_mill/agents/prerequisite.py" = ["S603"]
"src/robotsix_mill/core/db.py" = ["S110"]
"src/robotsix_mill/runtime/routes/_health.py" = ["S110"]
"src/robotsix_mill/runtime/routes/_misc.py" = ["S110"]
"src/robotsix_mill/runtime/stage_retry.py" = ["S311"]
"src/robotsix_mill/sandbox/__init__.py" = ["S108", "S603", "S607"]
"src/robotsix_mill/vcs/git_ops.py" = ["S603", "S607"]
"src/robotsix_mill/autoupdate/__init__.py" = ["S108", "S602", "S603", "S607", "C901"]
# Meta's deterministic ground-truth blocks shell out to read-only
# ``git grep`` over the repo clones (fixed argv, no shell, no untrusted
# input) — same safe git-subprocess pattern as git_ops above.
"src/robotsix_mill/meta/agent.py" = ["S603", "S607"]
"src/robotsix_mill/meta/todo_scan.py" = ["S603", "S607"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Body/File/Query default-argument pattern is deliberate;
# B008 (function-call-in-default) is a false positive for these.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Body",
    "fastapi.File",
]

[tool.deptry]
known_first_party = ["robotsix_mill"]
extend_exclude = []

[tool.deptry.per_rule_ignores]
# CLI-only dev/lint/docs tools that are never imported at runtime.
DEP002 = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "bandit",
    "mypy",
    "ruff",
    "deptry",
    "vulture",
    "mkdocs-material",
    "mkdocstrings",
    "langfuse",
    "robotsix-modules",
    # Declared so the board agent's BrokeredBoardResponder can import it, but
    # mill itself never imports robotsix_agent_comm (only board-agent does).
    "robotsix-agent-comm",
    # Declared in the tracing extra so robotsix_llmio can import them at
    # runtime (robotsix_mill itself only imports opentelemetry-api).
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]
# Packages imported directly but pulled in transitively through
# pydantic-ai-slim / sqlmodel — the imports are intentional.
DEP003 = ["pydantic", "sqlalchemy", "openai"]
# playwright is a Tier 2 browser-smoke-check dependency installed
# out-of-band (scripts/board_browser_check.py), deliberately NOT a
# runtime/dev dependency: the hermetic pytest suite never imports it and
# the import is deferred into _drive_browser(). Declaring it would bloat
# the install and the network-isolated test sandbox can't fetch Chromium.
DEP001 = ["playwright"]

[tool.mypy]
strict = true
python_version = "3.14"
packages = ["src/robotsix_mill", "src/robotsix_deploy"]
ignore_missing_imports = true
show_error_codes = true
