[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-yaml-config"
version = "0.1.0"
description = "Backend-agnostic YAML configuration cascade primitives: deep-merge, layered file loading, env-var overlay, and dotted-path flattening."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Damien Robotsix" }]
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_yaml_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
